--- a/note.html
+++ b/note.html
@@ -5,11 +5,65 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Note</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* Specific styling for note page */
+    body {
+      background: #f5f5dc; /* beige */
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    header {
+      background: #4F000B; /* dark red */
+      color: #f5f5dc;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 1.2rem;
+    }
+
+    main {
+      flex: 1;
+      padding: 2rem;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+    #noteTitleDisplay {
+      margin-bottom: 1rem;
+      font-size: 2rem;
+      color: #4F000B;
+      word-wrap: break-word;
+    }
+
+    #noteContentDisplay {
+      font-size: 1.2rem;
+      line-height: 1.6;
+      color: #333;
+      white-space: pre-wrap; /* keeps line breaks from textarea */
+    }
+
+    a {
+      color: #f5f5dc;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 0.3rem 0.5rem;
+      border-radius: 4px;
+      background: #720026; /* deep red */
+      transition: background 0.3s;
+    }
+
+    a:hover {
+      background: #4F000B;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1 id="noteTitleDisplay">Note</h1>
-    <a href="index.html" style="color:#f5f5dc;text-decoration:none;">← Back</a>
+    <span id="noteTitleDisplay">Note</span>
+    <a href="index.html">← Back</a>
   </header>
   <main>
     <p id="noteContentDisplay"></p>
