--- a/index.html
+++ b/index.html
@@ -3,48 +3,124 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sam's Notes</title>
+  <title>Note</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      background: #f5f5dc; /* beige */
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    header {
+      background: #4F000B; /* dark red */
+      color: #f5f5dc;
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 1.2rem;
+    }
+
+    main {
+      flex: 1;
+      padding: 2rem;
+      max-width: 800px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    #noteTitleDisplay, #noteContentDisplay {
+      width: 100%;
+      border: 1px solid #4F000B;
+      border-radius: 5px;
+      padding: 0.5rem;
+      font-size: 1.2rem;
+      background: #fff;
+      color: #333;
+    }
+
+    #noteTitleDisplay {
+      font-size: 2rem;
+      color: #4F000B;
+    }
+
+    #saveNoteBtn {
+      padding: 0.5rem 1rem;
+      background: #4F000B;
+      color: #f5f5dc;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      align-self: flex-start;
+      transition: background 0.3s;
+    }
+
+    #saveNoteBtn:hover {
+      background: #720026;
+    }
+
+    a {
+      color: #f5f5dc;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 0.3rem 0.5rem;
+      border-radius: 4px;
+      background: #720026; /* deep red */
+      transition: background 0.3s;
+    }
+
+    a:hover {
+      background: #4F000B;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1>Sam's Notes</h1>
-    <input type="text" id="searchBar" placeholder="Search notes...">
+    <span>Edit Note</span>
+    <a href="index.html">← Back</a>
   </header>
+  <main>
+    <input type="text" id="noteTitleDisplay" />
+    <textarea id="noteContentDisplay" rows="10"></textarea>
+    <button id="saveNoteBtn">Save</button>
+  </main>
 
-  <div class="container">
-    <aside>
-      <h2>Categories</h2>
-      <ul id="categories">
-        <li data-category="all" class="active">All</li>
-        <li data-category="work">Work</li>
-        <li data-category="school">School</li>
-        <li data-category="personal">Personal</li>
-      </ul>
-    </aside>
+  <script>
+    // Load note from LocalStorage
+    const currentNote = JSON.parse(localStorage.getItem('currentNote'));
+    const notes = JSON.parse(localStorage.getItem('notes')) || [];
 
-    <main>
-      <div id="notesList">
-        <!-- Notes will appear here -->
-      </div>
-      <button id="addNoteBtn">+ Add Note</button>
-    </main>
-  </div>
+    const titleInput = document.getElementById('noteTitleDisplay');
+    const contentInput = document.getElementById('noteContentDisplay');
+    const saveBtn = document.getElementById('saveNoteBtn');
 
-  <div id="noteModal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <input type="text" id="noteTitle" placeholder="Title">
-      <textarea id="noteContent" placeholder="Write your note here..."></textarea>
-      <select id="noteCategory">
-        <option value="work">Work</option>
-        <option value="school">School</option>
-        <option value="personal">Personal</option>
-      </select>
-      <button id="saveNoteBtn">Save Note</button>
-    </div>
-  </div>
+    if (currentNote) {
+      titleInput.value = currentNote.title;
+      contentInput.value = currentNote.content;
+    }
 
-  <script src="script.js"></script>
+    saveBtn.addEventListener('click', () => {
+      const updatedNote = {
+        ...currentNote,
+        title: titleInput.value,
+        content: contentInput.value
+      };
+
+      // Update notes array in LocalStorage
+      const noteIndex = notes.findIndex(n => n.title === currentNote.title && n.content === currentNote.content);
+      if (noteIndex !== -1) {
+        notes[noteIndex] = updatedNote;
+      }
+
+      localStorage.setItem('notes', JSON.stringify(notes));
+      localStorage.setItem('currentNote', JSON.stringify(updatedNote));
+
+      alert('Note saved!');
+    });
+  </script>
 </body>
 </html>
