--- a/note.html
+++ b/note.html
@@ -6,33 +6,54 @@
   <title>Edit Note</title>
   <link rel="stylesheet" href="style.css">
   <style>
+    /* Body and layout */
     body {
-      background: #f5f5dc;
+      background-color: #f5f5dc;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
       display: flex;
       flex-direction: column;
       min-height: 100vh;
     }
 
+    /* Header */
     header {
-      background: #4F000B;
+      background-color: #4F000B;
       color: #f5f5dc;
-      padding: 1rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      padding: 1rem 2rem;
       font-size: 1.2rem;
     }
 
+    header a {
+      color: #f5f5dc;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 0.3rem 0.6rem;
+      border-radius: 4px;
+      background: #720026;
+      transition: background 0.3s;
+    }
+
+    header a:hover {
+      background: #4F000B;
+    }
+
+    /* Main container */
     main {
       flex: 1;
-      padding: 2rem;
-      max-width: 800px;
-      margin: 0 auto;
       display: flex;
       flex-direction: column;
       gap: 1rem;
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1rem;
     }
 
+    /* Inputs */
     input, textarea, select {
       width: 100%;
       border: 1px solid #4F000B;
@@ -41,16 +62,27 @@
       font-size: 1.2rem;
       background: #fff;
       color: #333;
+      box-sizing: border-box;
     }
 
     #noteTitleDisplay {
       font-size: 2rem;
       color: #4F000B;
+      margin-bottom: 0.5rem;
     }
 
+    textarea {
+      resize: vertical;
+    }
+
+    select {
+      font-size: 1rem;
+    }
+
+    /* Save button */
     #saveNoteBtn {
       padding: 0.5rem 1rem;
-      background: #4F000B;
+      background-color: #4F000B;
       color: #f5f5dc;
       border: none;
       border-radius: 5px;
@@ -60,21 +92,7 @@
     }
 
     #saveNoteBtn:hover {
-      background: #720026;
-    }
-
-    a {
-      color: #f5f5dc;
-      text-decoration: none;
-      font-weight: bold;
-      padding: 0.3rem 0.5rem;
-      border-radius: 4px;
-      background: #720026;
-      transition: background 0.3s;
-    }
-
-    a:hover {
-      background: #4F000B;
+      background-color: #720026;
     }
   </style>
 </head>
@@ -83,9 +101,10 @@
     <span>Edit Note</span>
     <a href="index.html">← Back</a>
   </header>
+
   <main>
-    <input type="text" id="noteTitleDisplay" />
-    <textarea id="noteContentDisplay" rows="10"></textarea>
+    <input type="text" id="noteTitleDisplay" placeholder="Note Title">
+    <textarea id="noteContentDisplay" rows="10" placeholder="Write your note here..."></textarea>
     <select id="noteCategorySelect">
       <option value="personal">Personal</option>
       <option value="work">Work</option>
@@ -96,6 +115,7 @@
   </main>
 
   <script>
+    // Get the current note from LocalStorage
     const currentNote = JSON.parse(localStorage.getItem('currentNote'));
     const notes = JSON.parse(localStorage.getItem('notes')) || [];
 
@@ -104,12 +124,14 @@
     const categorySelect = document.getElementById('noteCategorySelect');
     const saveBtn = document.getElementById('saveNoteBtn');
 
+    // Pre-fill inputs with current note data
     if (currentNote) {
       titleInput.value = currentNote.title;
       contentInput.value = currentNote.content;
       categorySelect.value = currentNote.category || 'personal';
     }
 
+    // Save changes
     saveBtn.addEventListener('click', () => {
       const updatedNote = {
         title: titleInput.value,
@@ -117,12 +139,18 @@
         category: categorySelect.value
       };
 
-      // Update notes array
-      const noteIndex = notes.findIndex(n => n.title === currentNote.title && n.content === currentNote.content && n.category === currentNote.category);
+      // Find and update the note in the notes array
+      const noteIndex = notes.findIndex(n => 
+        n.title === currentNote.title &&
+        n.content === currentNote.content &&
+        n.category === currentNote.category
+      );
+
       if (noteIndex !== -1) {
         notes[noteIndex] = updatedNote;
       }
 
+      // Update LocalStorage
       localStorage.setItem('notes', JSON.stringify(notes));
       localStorage.setItem('currentNote', JSON.stringify(updatedNote));
 
