--- a/note.html
+++ b/note.html
@@ -7,99 +7,109 @@
   <link rel="stylesheet" href="style.css">
   <style>
     body {
-      background: #f5f5dc;
-      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
+      font-family: 'Arial', sans-serif;
+      background: #f5f5dc;
+      color: #000;
+      height: 100vh;
       display: flex;
       flex-direction: column;
-      min-height: 100vh;
     }
 
     header {
-      background: #4F000B;
-      color: #f5f5dc;
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 1rem 2rem;
-      font-size: 1.2rem;
+      background: #f5f5dc;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
     }
 
     header a {
-      color: #f5f5dc;
       text-decoration: none;
+      color: #720026;
       font-weight: bold;
+      font-size: 1rem;
       padding: 0.3rem 0.6rem;
       border-radius: 4px;
-      background: #720026;
       transition: background 0.3s;
     }
 
     header a:hover {
       background: #4F000B;
+      color: #f5f5dc;
+    }
+
+    #noteTitleDisplay {
+      font-size: 2rem;
+      font-weight: bold;
+      width: 100%;
+      border: none;
+      outline: none;
+      margin-bottom: 1rem;
+      background: transparent;
+    }
+
+    #noteContentDisplay {
+      flex: 1;
+      width: 100%;
+      border: none;
+      outline: none;
+      resize: none;
+      font-size: 1.1rem;
+      line-height: 1.6;
+      background: transparent;
+      padding: 0;
     }
 
     main {
       flex: 1;
       display: flex;
       flex-direction: column;
-      gap: 1rem;
-      max-width: 800px;
+      max-width: 900px;
       margin: 2rem auto;
-      padding: 1rem;
+      padding: 0 2rem;
     }
 
-    input, textarea, select {
-      width: 100%;
-      border: 1px solid #4F000B;
-      border-radius: 5px;
-      padding: 0.5rem;
-      font-size: 1.2rem;
-      background: #fff;
-      color: #333;
-      box-sizing: border-box;
-    }
-
-    #noteTitleDisplay {
-      font-size: 2rem;
-      color: #4F000B;
-      margin-bottom: 0.5rem;
-    }
-
-    textarea {
-      resize: vertical;
-    }
-
-    select {
+    #noteCategorySelect {
+      margin-bottom: 1rem;
+      padding: 0.4rem;
       font-size: 1rem;
+      border: 1px solid #720026;
+      border-radius: 4px;
+      width: 200px;
+      background: #fff;
+      color: #000;
     }
 
     #saveNoteBtn {
-      padding: 0.5rem 1rem;
-      background-color: #4F000B;
-      color: #f5f5dc;
+      margin-top: 1rem;
+      padding: 0.6rem 1rem;
+      font-size: 1rem;
       border: none;
       border-radius: 5px;
+      background: #720026;
+      color: #f5f5dc;
       cursor: pointer;
       align-self: flex-start;
       transition: background 0.3s;
     }
 
     #saveNoteBtn:hover {
-      background-color: #720026;
+      background: #4F000B;
     }
   </style>
 </head>
 <body>
   <header>
-    <span>Edit Note</span>
+    <span>Editing Note</span>
     <a href="index.html">← Back</a>
   </header>
 
   <main>
     <input type="text" id="noteTitleDisplay" placeholder="Note Title">
-    <textarea id="noteContentDisplay" rows="10" placeholder="Write your note here..."></textarea>
+    <textarea id="noteContentDisplay" placeholder="Start typing..." rows="20"></textarea>
     <select id="noteCategorySelect"></select>
     <button id="saveNoteBtn">Save</button>
   </main>
@@ -160,5 +170,4 @@
     });
   </script>
 </body>
-</html>
 </html>
