--- a/index.html
+++ b/index.html
@@ -1,240 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Notes</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f5f5dc;
-    }
-
-    header {
-      background: #4F000B;
-      color: #f5f5dc;
-      padding: 1rem;
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-    }
-
-    header h1 {
-      flex: 1;
-      margin: 0;
-    }
-
-    header input {
-      padding: 0.4rem;
-      border-radius: 5px;
-      border: none;
-      flex: 2;
-    }
-
-    header button {
-      padding: 0.4rem 0.8rem;
-      background: #720026;
-      color: #f5f5dc;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .container {
-      display: flex;
-      min-height: calc(100vh - 70px);
-    }
-
-    aside {
-      width: 180px;
-      background: #4F000B;
-      color: #f5f5dc;
-      padding: 1rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-
-    #categoryList {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    #categoryList li {
-      padding: 0.4rem;
-      margin-bottom: 0.3rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      cursor: pointer;
-      border-radius: 4px;
-    }
-
-    #categoryList li.active, #categoryList li:hover {
-      background: #720026;
-    }
-
-    .deleteCatBtn {
-      background: #f5f5dc;
-      color: #720026;
-      border: none;
-      border-radius: 50%;
-      width: 18px;
-      height: 18px;
-      font-size: 12px;
-      line-height: 16px;
-      cursor: pointer;
-    }
-
-    main {
-      flex: 1;
-      padding: 1rem;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-    }
-
-    .note {
-      background: #fff;
-      padding: 0.8rem;
-      border-radius: 5px;
-      border-left: 5px solid #4F000B;
-      width: 200px;
-      cursor: pointer;
-      position: relative;
-    }
-
-    .note h3 {
-      margin: 0 0 0.5rem 0;
-      color: #4F000B;
-    }
-
-    .note p {
-      margin: 0;
-      font-size: 0.9rem;
-      color: #333;
-    }
-
-    .deleteBtn {
-      position: absolute;
-      top: 5px;
-      right: 5px;
-      background: #720026;
-      color: #f5f5dc;
-      border: none;
-      border-radius: 50%;
-      width: 20px;
-      height: 20px;
-      cursor: pointer;
-    }
-
-    .category-add {
-      margin-top: 1rem;
-      display: flex;
-      gap: 0.3rem;
-    }
-
-    .category-add input {
-      flex: 1;
-      border-radius: 4px;
-      border: 1px solid #f5f5dc;
-      padding: 0.3rem;
-    }
-
-    .category-add button {
-      background: #720026;
-      color: #f5f5dc;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      padding: 0.3rem 0.5rem;
-    }
-
-    /* Modal */
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.5);
-      justify-content: center;
-      align-items: center;
-    }
-
-    .modal-content {
-      background: #f5f5dc;
-      padding: 1rem;
-      border-radius: 5px;
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-      width: 300px;
-    }
-
-    .modal-content input, .modal-content textarea, .modal-content select {
-      padding: 0.4rem;
-      border-radius: 4px;
-      border: 1px solid #4F000B;
-      width: 100%;
-    }
-
-    .modal-content button {
-      background: #4F000B;
-      color: #f5f5dc;
-      border: none;
-      padding: 0.5rem;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-
-    .close {
-      position: absolute;
-      top: 10px;
-      right: 15px;
-      font-size: 1.2rem;
-      cursor: pointer;
-      color: #720026;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>My Notes</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>My Notes</h1>
-    <input type="text" id="searchBar" placeholder="Search notes...">
+
+<header>
+  <h1>My Notes</h1>
+  <input type="text" id="searchBar" placeholder="Search notes...">
+  <div class="header-buttons">
     <button id="addNoteBtn">+ Add Note</button>
-  </header>
-
-  <div class="container">
-    <aside>
-      <ul id="categoryList"></ul>
-      <div class="category-add">
-        <input type="text" id="newCategoryInput" placeholder="New category">
-        <button id="addCategoryBtn">Add</button>
-      </div>
-    </aside>
-    <main>
-      <div id="notesList"></div>
-    </main>
+    <button id="addCategoryBtn">+ Add Category</button>
   </div>
+</header>
 
-  <div id="noteModal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <input type="text" id="noteTitle" placeholder="Title">
-      <textarea id="noteContent" placeholder="Content"></textarea>
-      <select id="noteCategory"></select>
-      <button id="saveNoteBtn">Save</button>
-    </div>
+<div class="container">
+  <aside>
+    <ul id="categoryList"></ul>
+  </aside>
+  <main>
+    <div id="notesList"></div>
+  </main>
+</div>
+
+<!-- Modal for adding/editing notes -->
+<div id="noteModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <input type="text" id="noteTitle" placeholder="Title">
+    <textarea id="noteContent" placeholder="Content"></textarea>
+    <select id="noteCategory"></select>
+    <button id="saveNoteBtn">Save</button>
   </div>
+</div>
 
-  <script src="script.js"></script>
-</body>
-</html>
-
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
