--- a/index.html
+++ b/index.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Notes</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Notes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-  <h1>My Notes</h1>
-  <input type="text" id="searchBar" placeholder="Search notes...">
-  <button id="addNoteBtn">+ Add Note</button>
-  <button id="addCategoryBtn">+ Add Category</button>
-</header>
+  <header>
+    <h1>My Notes</h1>
+    <input type="text" id="searchBar" placeholder="Search notes...">
+    <div class="header-buttons">
+      <button id="addNoteBtn">+ Add Note</button>
+      <button id="addCategoryBtn">+ Add Category</button>
+    </div>
+  </header>
 
-<div class="container">
-  <aside>
-    <ul id="categoryList"></ul>
-  </aside>
-  <main>
-    <div id="notesList"></div>
-  </main>
-</div>
-
-<div id="noteModal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <input type="text" id="noteTitle" placeholder="Title">
-    <textarea id="noteContent" placeholder="Content"></textarea>
-    <select id="noteCategory"></select>
-    <button id="saveNoteBtn">Save</button>
+  <div class="container">
+    <aside>
+      <ul id="categoryList"></ul>
+      <input type="text" id="newCategoryInput" placeholder="New category">
+    </aside>
+    <main>
+      <div id="notesList"></div>
+    </main>
   </div>
-</div>
 
-<script src="script.js"></script>
+  <div id="noteModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <input type="text" id="noteTitle" placeholder="Title">
+      <textarea id="noteContent" placeholder="Content"></textarea>
+      <select id="noteCategory"></select>
+      <button id="saveNoteBtn">Save</button>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
