--- a/note.html
+++ b/note.html
@@ -1,89 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Note</title>
-<link rel="stylesheet" href="style.css">
-<style>
-  body {
-    font-family: sans-serif;
-    margin: 0;
-    padding: 0;
-    background: #f5f5dc; /* same beige background */
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Edit Note</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      background: #f5f5dc;
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
 
-  header {
-    background: #4F000B;
-    color: #f5f5dc;
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-  }
+    header {
+      display: flex;
+      align-items: center;
+      padding: 1rem;
+      background: #4F000B;
+      color: #f5f5dc;
+    }
 
-  header h1 {
-    flex: 1;
-    margin: 0;
-  }
+    header h1 {
+      flex: 1;
+    }
 
-  #backBtn {
-    background: #720026;
-    color: #f5f5dc;
-    border: none;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    cursor: pointer;
-  }
+    main {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      padding: 2rem;
+    }
 
-  #noteContentEditable {
-    margin: 1rem;
-    padding: 1rem;
-    border: 1px solid #4F000B;
-    border-radius: 5px;
-    min-height: 400px;
-    background: #fff;
-    outline: none;
-    white-space: pre-wrap;
-  }
+    #editNoteArea {
+      width: 90%;
+      max-width: 800px;
+      background: #fff;
+      border-left: 5px solid #4F000B;
+      border-radius: 5px;
+      padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      box-shadow: 0 0 10px rgba(79, 0, 11, 0.3);
+    }
 
-  #noteTitleEditable {
-    margin: 1rem;
-    padding: 0.5rem;
-    font-size: 1.5rem;
-    font-weight: bold;
-    border: none;
-    border-bottom: 2px solid #4F000B;
-    width: calc(100% - 2rem);
-    background: transparent;
-    color: #4F000B;
-    outline: none;
-  }
+    #editNoteArea input {
+      font-size: 1.5rem;
+      font-weight: bold;
+      border: none;
+      outline: none;
+    }
 
-  #saveBtn {
-    margin: 1rem;
-    padding: 0.5rem 1rem;
-    background: #4F000B;
-    color: #f5f5dc;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
+    #editNoteArea textarea {
+      flex: 1;
+      border: none;
+      outline: none;
+      resize: vertical;
+      min-height: 300px;
+      font-size: 1rem;
+      line-height: 1.5rem;
+    }
 
-  #saveBtn:hover, #backBtn:hover {
-    background: #720026;
-  }
-</style>
+    #saveBtn {
+      align-self: flex-end;
+      padding: 0.5rem 1rem;
+      background: #720026;
+      color: #f5f5dc;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    #saveBtn:hover {
+      background: #4F000B;
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>Edit Note</h1>
-    <button id="backBtn">← Home</button>
   </header>
 
-  <input id="noteTitleEditable" placeholder="Title">
-  <div id="noteContentEditable" contenteditable="true"></div>
-  <button id="saveBtn">Save</button>
+  <main>
+    <div id="editNoteArea">
+      <input type="text" id="noteTitle" placeholder="Title">
+      <textarea id="noteContent" placeholder="Content"></textarea>
+      <button id="saveBtn">Save</button>
+    </div>
+  </main>
 
-  <script src="note.js"></script>
+  <script>
+    const noteTitleInput = document.getElementById("noteTitle");
+    const noteContentInput = document.getElementById("noteContent");
+    const saveBtn = document.getElementById("saveBtn");
+
+    // Load current note from localStorage
+    let currentNote = JSON.parse(localStorage.getItem("currentNote"));
+
+    if (currentNote) {
+      noteTitleInput.value = currentNote.title;
+      noteContentInput.value = currentNote.content;
+    }
+
+    saveBtn.addEventListener("click", () => {
+      if (!currentNote) return;
+
+      // Update the note in the saved notes array
+      let notes = JSON.parse(localStorage.getItem("notes")) || [];
+      const noteIndex = notes.findIndex(n => n.title === currentNote.title && n.content === currentNote.content && n.category === currentNote.category);
+
+      if (noteIndex > -1) {
+        notes[noteIndex].title = noteTitleInput.value;
+        notes[noteIndex].content = noteContentInput.value;
+        localStorage.setItem("notes", JSON.stringify(notes));
+        // Update currentNote for consistency
+        currentNote = notes[noteIndex];
+        localStorage.setItem("currentNote", JSON.stringify(currentNote));
+        alert("Note saved!");
+      }
+    });
+  </script>
 </body>
 </html>
